edited index file

--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -9,12 +9,11 @@
     <link rel="icon" href="/images/favicon-32x32.png" sizes="32*32">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Manrope">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/style_1.css">
 </head>
 <body>
     <header >
-        <div class="whole parent">
-
-            
+        <div class="whole">
                 <img id="drawers" src="images/drawers.jpg" alt="image of drawers" >
                <div class="part1">
                     <h2>Shift the overall look and feel by adding these wonderful touches to furniture in your home</h2>
@@ -35,8 +34,9 @@
                       <div class="share">
                           <div class="tooltip"><img id="abc" src="/images/icon-share.png" alt="share">
 
-                              <div class="tooltiptext"><span class="facebook">Share</span>
-                                   <div class="facebook"> <img src="images/icon-facebook.png"></div>
+                              <div class="tooltiptext">
+                                  <span class="facebook">Share</span>
+                                   <div id="main"> <img src="images/icon-facebook.png"></div>
                                    <div class="twitter"> <i class="fa fa-twitter" aria-hidden="true"></i></div>
                                    <div class="pinterest"><i class="fa fa-pinterest" aria-hidden="true"></i></div>
                                 
